# fish-hash

./: .gitignore  CMakeLists.txt  FishHash.cpp  README.md
comparison/: Cargo.toml
comparison/src/: fish_hash_bindings.rs  main.rs
cpp/: CMakeCache.txt  CMakeLists.txt  FishHash.cpp  FishHash.h  Makefile  cmake_install.cmake
rust/: Cargo.toml  build.rs
rust/src/: fish_hash_bindings.rs  keccak.rs  lib.rs  main.rs  rust_hash.rs
