[package]
name = "fish_hash"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

description = "Hashing algorithm used for Iron Fish"
authors = ["Iron Fish <contact@ironfish.network> (https://ironfish.network)"]
homepage = "https://ironfish.network/"
repository = "https://github.com/iron-fish/ironfish"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
